--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
           <input type="radio" name="pi" id="radius" value="radius" checked />
           <label for="radius">半径</label>
           <input class="number" placeholder="㎝" />
+          <p>㎝</p>
         </div>
         <div class="diameter pai">
           <input type="radio" name="pi" id="diameter" value="diameter" />
           <label for="diameter">直径</label>
           <input class="number" placeholder="㎝" />
+          <p>㎝</p>
         </div>
         <div class="circumference pai">
           <input
@@ -34,24 +36,29 @@
           />
           <label for="circumference">円周</label>
           <input class="number" placeholder="㎝" />
+          <p>㎝</p>
         </div>
         <div class="area pai">
           <input type="radio" name="pi" id="area" value="area" />
           <label for="area">面積</label>
           <input class="number" placeholder="㎠" />
+          <p>㎠</p>
         </div>
         <div class="semicircle pai">
           <input type="radio" name="pi" id="semicircle" value="semicircle" />
           <label for="semicircle">半円</label>
           <input class="number" placeholder="㎠" />
+          <p>㎠</p>
         </div>
         <div class="quarter pai">
           <input type="radio" name="pi" id="quarter" value="quarter" />
           <label for="quarter">四半円</label>
           <input class="number" placeholder="㎠" />
+          <p>㎠</p>
         </div>
       </div>
       <button>計算</button>
     </main>
+    <script src="main.js"></script>
   </body>
 </html>
