--- a/index.html
+++ b/index.html
@@ -14,17 +14,20 @@
   </head>
   <body>
     <main class="main">
+      <div class="clear">
+        <input type="button" value="クリア" onclick="cle();" />
+      </div>
       <div class="center">
         <div class="radius pai">
           <input type="radio" name="pi" id="radius" value="radius" checked />
           <label for="radius">半径</label>
-          <input class="number" placeholder="㎝" />
+          <input class="number" placeholder="㎝" id="pi1" />
           <p>㎝</p>
         </div>
         <div class="diameter pai">
           <input type="radio" name="pi" id="diameter" value="diameter" />
           <label for="diameter">直径</label>
-          <input class="number" placeholder="㎝" />
+          <input class="number" placeholder="㎝" id="pi2" />
           <p>㎝</p>
         </div>
         <div class="circumference pai">
@@ -35,29 +38,34 @@
             value="circumference"
           />
           <label for="circumference">円周</label>
-          <input class="number" placeholder="㎝" />
+          <input class="number" placeholder="㎝" id="pi3" />
           <p>㎝</p>
         </div>
         <div class="area pai">
           <input type="radio" name="pi" id="area" value="area" />
           <label for="area">面積</label>
-          <input class="number" placeholder="㎠" />
+          <input class="number" placeholder="㎠" id="pi4" />
           <p>㎠</p>
         </div>
         <div class="semicircle pai">
           <input type="radio" name="pi" id="semicircle" value="semicircle" />
           <label for="semicircle">半円</label>
-          <input class="number" placeholder="㎠" />
+          <input class="number" placeholder="㎠" id="pi5" />
           <p>㎠</p>
         </div>
         <div class="quarter pai">
           <input type="radio" name="pi" id="quarter" value="quarter" />
           <label for="quarter">四半円</label>
-          <input class="number" placeholder="㎠" />
+          <input class="number" placeholder="㎠" id="pi6" />
           <p>㎠</p>
         </div>
       </div>
-      <button>計算</button>
+      <button
+        onclick="
+      display(calculation());"
+      >
+        計算
+      </button>
     </main>
     <script src="main.js"></script>
   </body>
